package java_design_patterns.D_bridge.vehicle_production;

public abstract class WorkShop {
    public abstract void work(Vehicle vehicle);
}
